gke_setup/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
  namespace: dev
  labels:
    app: django-svc    
spec:
  type: ClusterIP
  ports:              
    - port: 8000        
      protocol: TCP
      targetPort: 8000  
  selector: 
    app: django
