gke_setup/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-test
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: django-mc
spec:
  rules:
  - host: www.duvindu.org
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: django-svc
            port:
              number: 8000
